ITJCodeChallenge/force-app/main/default/objects/ITJ_Zipcode__c/ITJ_Zipcode__c.object-meta.xml
<CustomObject>
    <label>ITJ_Zipcode</label>
    <nameField>
        <label>ITJ_Zipcode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITJ_Zipcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>