ITJCodeChallenge/force-app/main/default/objects/ITJ_Zipcode__c/fields/ITJ_Country__c.field-meta.xml
<CustomField>
    <fullName>ITJ_Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>