ITJCodeChallenge/force-app/main/default/objects/ITJ_Zipcode__c/fields/ITJ_Country_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>ITJ_Country_Abbreviation__c</fullName>
    <label>Country Abbreviation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>