ITJCodeChallenge/force-app/main/default/objects/ITJ_Zipcode__c/fields/ITJ_Non_US_Response__c.field-meta.xml
<CustomField>
    <fullName>ITJ_Non_US_Response__c</fullName>
    <label>Non-US Response</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>