ITJCodeChallenge/force-app/main/default/objects/ITJ_Zipcode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Postal_Code__c</columns>
    <columns>ITJ_Country__c</columns>
    <columns>ITJ_Country_Abbreviation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>