ITJCodeChallenge/force-app/main/default/objects/ITJ_Zipcode__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <columns>ITJ_Country__c</columns>
    <columns>ITJ_Country_Abbreviation__c</columns>
    <columns>Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent</label>
</ListView>